--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
-    <string name="app_name">UsefulAuthWithWeather</string>
+    <string name="app_name">Useful Auth App</string>
+
+    <!-- Auth screen -->
+    <string name="invalid_username">Некорректный e-mail</string>
+    <string name="invalid_password">Некорректный пароль</string>
+    <string name="create_account">Создать</string>
+    <string name="authentication">Авторизация</string>
+    <string name="log_in">Войти</string>
+    <string name="hint_email">Электронная почта</string>
+    <string name="hint_password">Пароль</string>
+
+    <!-- Weather -->
+    <string name="weather_snack">Погода в Лондоне: %s</string>
+    <string name="error_fetching_weather">Произошла ошибка при загрузке погоды</string>
 </resources>
